header styling and logic updated

--- a/src/App.css
+++ b/src/App.css
@@ -98,72 +98,84 @@ a {
   text-decoration: none;
 }
 
-button{
+button {
   cursor: pointer;
-  border:none;
+  border: none;
   outline: none;
 }
 
-img{
+img {
   max-width: 100%;
   height: auto;
 }
 
-.section{
+.section {
   padding: 6rem 0rem;
 }
 
-.section_title{
+.section_title {
   font-size: var(--h1-font-size);
-  color:var(--title-color);
+  color: var(--title-color);
 }
 
-.section_subtitle{
+.section_subtitle {
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: 4rem;
 }
 
 .section_title,
-.section_subtitle{
+.section_subtitle {
   text-align: center;
 }
 
-.container{
+.container {
   max-width: 968px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.grid{
+.grid {
   display: grid;
   gap: 1.5rem;
 }
 
-.button{
+.button {
   display: inline-block;
   background-color: var(--title-color);
-  color:(var(--container-color));
+  color: (var(--container-color));
   padding: 1.25rem 2rem;
-  border-radius: 1rem ;
+  border-radius: 1rem;
   font-weight: var(--font-medium);
 }
 
-.button:hover{
+.button:hover {
   background-color: var(--title-color-dark);
 }
 
-.button_icon{
+.button_icon {
   margin-left: var(--mb-0-5);
 }
 
-.button--flex{
+.button--flex {
   display: inline-flex;
   align-items: center;
 }
 
 /* breakpoints */
-@media screen and (max-width:992px){}
-@media screen and (max-width:768px){}
-@media screen and (max-width:576px){}
-@media screen and (max-width:350px){}
+@media screen and (max-width: 992px) {
+  .container {
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+  }
+}
+@media screen and (max-width: 768px) {
+}
+@media screen and (max-width: 576px) {
+}
+@media screen and (max-width: 350px) {
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+}
