--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,12 +1,17 @@
 .about_img {
-  background: url(../../assets/displayPic.jpg);
-  /* background-repeat: no-repeat; */
-  /* background-position: center; */
-  /* background-size: cover; */
-  /* box-shadow: inset 0 0 0 9px rgb(255, 255, 255 / 30%); */
-  /* order: 1; */
-  /* justify-self: center; */
-  /* width: 500px; */
+  /* background: url(../../assets/displayPic.jpg); */
   height: 500px;
   justify-content: center;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  margin-bottom: var(--mb-1);
+}
+
+.about_description {
+  
+  font-size: var(--h3-font-size);
+  padding-right: 5.5rem;
+  padding-left: 5.5rem;
+  font-weight: var(--font-normal);
+  margin-bottom: var(--mb-1);
 }
