--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,10 +1,14 @@
 .footer{
     background-color: var(--container-color);
-    border-top:1px solid rgba(0,0,0,0.1)
+    border-top:1px solid rgba(0,0,0,0.1);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
 .footer_container{
-    padding: 2rem 0 6rem;
+    padding: 1rem 0 1rem;
 }
 
 .footer_title,
@@ -54,3 +58,7 @@
     text-align: center;
     font-size: var(--smaller-font-size);
 }
+
+.more-content-page .footer {
+    position: relative;
+  } 
