--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,10 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 h1,
