--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,10 +1,11 @@
 .footer{
     background-color: var(--container-color);
     border-top:1px solid rgba(0,0,0,0.1);
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     left: 0;
     width: 100%;
+    margin-top: auto;
 }
 
 .footer_container{
@@ -58,7 +59,3 @@
     text-align: center;
     font-size: var(--smaller-font-size);
 }
-
-.more-content-page .footer {
-    position: relative;
-  } 
