--- a/src/components/pages/resume/resume.css
+++ b/src/components/pages/resume/resume.css
@@ -5,3 +5,9 @@
   font-weight: var(--font-normal);
   margin-bottom: var(--mb-1);
 }
+
+.resume_container{
+  padding-left: 10rem;
+  align-items: center;
+  position: relative;
+}
