--- a/src/App.css
+++ b/src/App.css
@@ -81,10 +81,6 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
-
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 h1,
@@ -174,10 +170,16 @@ img {
   }
 }
 @media screen and (max-width: 768px) {
+  .section{
+    padding: 2rem 0 4rem;
+  }
 }
 @media screen and (max-width: 576px) {
 }
 @media screen and (max-width: 350px) {
+  :root{
+    --big-font-size:2.25rem;
+  }
   .container {
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
