--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,15 +1,10 @@
 .footer{
     background-color: var(--container-color);
-    border-top:1px solid rgba(0,0,0,0.1);
-    /* position: absolute; */
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    margin-top: auto;
+    border-top:1px solid rgba(0,0,0,0.1)
 }
 
 .footer_container{
-    padding: 1rem 0 1rem;
+    padding: 2rem 0 6rem;
 }
 
 .footer_title,
