--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -5,10 +5,6 @@
   align-items: center;
 }
 
-.home {
-  min-height: 80vh;
-}
-
 .home_social {
   display: grid;
   grid-template-columns: max-content;
@@ -54,7 +50,7 @@
 }
 
 .home_img {
-  background: url(../../../assets/displayPic.jpg);
+  background: url(../../assets/displayPic.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -88,14 +84,14 @@
   }
 }
 @media screen and (max-width: 768px) {
-  .home_content {
-    grid-template-columns: 0.5fr 3fr;
-    padding-top: 3.5rem;
-  }
-  .home_img {
-    justify-self: center;
-  }
-  .home_data {
-    grid-column: 1/3;
-  }
+    .home_content {
+      grid-template-columns: 0.5fr 3fr;
+      padding-top: 3.5rem;
+    }
+    .home_img {
+      justify-self: center;
+    }
+    .home_data{
+        grid-column: 1/3;
+    }
 }
