--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -1,18 +1,105 @@
+.about_container{
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  column-gap: 4rem;
+}
+
 .about_img {
   /* background: url(../../assets/displayPic.jpg); */
-  height: 500px;
+  width: 350px;
+  border-radius: 1.5rem;
+  justify-self: center;
+  /* height: 500px;
   justify-content: center;
   padding-left: 10rem;
   padding-right: 10rem;
-  margin-bottom: var(--mb-1);
+  margin-bottom: var(--mb-1); */
 }
 
+.about_info{
+  grid-template-columns: repeat(2,140px);
+  gap:0.5rem;
+  margin-bottom: var(--mb-2);
+}
+
+.about_box{
+  background-color: var(--container-color);
+  border: 1px  rgba(0, 0, 0, 0.1);
+  border-radius: 0.75rem;
+  text-align: center;
+  padding: 1.5rem 1.25rem;
+}
+
+.about_icon{
+  font-size: 1.5rem;
+  color: var(--title-color);
+  margin-bottom: var(--mb-0-5);
+}
+
+.about_title{
+font-size: var(--small-font-size);
+font-weight: var(--font-medium);
+}
+
+.about_subtitle{
+  font-size: var(--tiny-font-size);
+}
 .about_description {
-  
-  font-size: var(--h3-font-size);
+  padding: 0.4rem;
+  margin-bottom: var(--mb-2-5);
+  /* font-size: var(--h3-font-size);
   padding-right: 5.5rem;
   padding-left: 5.5rem;
   font-weight: var(--font-normal);
-  margin-bottom: var(--mb-1);
+  margin-bottom: var(--mb-1); */
 }
 
+/* breakpoints */
+@media screen and (max-width: 992px) {
+  .about_container {
+    grid-template-columns: 1fr;
+    row-gap: 2.5rem;
+  }
+  .about_img{
+    width: 220px;
+  }
+  .about_box{
+    padding:0.75rem 0.5rem;
+  }
+
+  .about_data{
+    text-align: center;
+  }
+
+  .about_info{
+    justify-content: center;
+  }
+  .about_description{
+    padding: 0.5rem;
+    margin-bottom: 2rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  body{
+    margin: 0 0 var(--header-height) 0;
+  }
+  .section{
+    padding: 2rem 0 4rem;
+  }
+  .section_subtitle{
+    margin-bottom: var(--mb-3);
+  }
+}
+@media screen and (max-width: 576px) {
+  .about_info{
+    grid-template-columns: repeat(3,1fr);
+  }
+  .about_description{
+    padding:0;
+  }
+}
+@media screen and (max-width: 350px) {
+  .about_info{
+    grid-template-columns: repeat(2,1fr);
+  }
+}
