about me grid updated

--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -5,19 +5,13 @@
 }
 
 .about_img {
-  /* background: url(../../assets/displayPic.jpg); */
   width: 350px;
   border-radius: 1.5rem;
   justify-self: center;
-  /* height: 500px;
-  justify-content: center;
-  padding-left: 10rem;
-  padding-right: 10rem;
-  margin-bottom: var(--mb-1); */
 }
 
 .about_info{
-  grid-template-columns: repeat(2,140px);
+  grid-template-columns: repeat(2,240px);
   gap:0.5rem;
   margin-bottom: var(--mb-2);
 }
@@ -46,12 +40,7 @@ font-weight: var(--font-medium);
 }
 .about_description {
   padding: 0.4rem;
-  margin-bottom: var(--mb-2-5);
-  /* font-size: var(--h3-font-size);
-  padding-right: 5.5rem;
-  padding-left: 5.5rem;
-  font-weight: var(--font-normal);
-  margin-bottom: var(--mb-1); */
+  /* margin-bottom:8px; */
 }
 
 /* breakpoints */
@@ -92,7 +81,7 @@ font-weight: var(--font-medium);
 }
 @media screen and (max-width: 576px) {
   .about_info{
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
   }
   .about_description{
     padding:0;
